alignment fix

--- a/style.css
+++ b/style.css
@@ -96,12 +96,11 @@ footer {
 }
 
 main {
-	margin-top: 100px;
+	margin-top: 120px;
 	padding: 50px;
 	align-items: center;
-	width: 50%;
+	width: 75%;
 	padding: 10px;
-	position: relative; /* Position text */
 	left: 50%; /* Position text in the middle */
 	transform: translateX(-50%); /* Position text in the middle */
 }
